[package]
name = "sinuous"
version = "0.1.3"
authors = ["Antoine Busch <antoine.busch@gmail.com>"]
edition = "2021"
description = "A simple TUI for controlling local Sonos speakers"
license = "MIT"
repository = "https://github.com/abusch/sinuous.git"
homepage = "https://github.com/abusch/sinuous"

[dependencies]
anyhow = "1.0.57"
clap = { version = "4.0", features=["cargo"] }
crossterm ={ version = "0.26", features=["event-stream"] }
futures = "0.3.21"
human-panic = "1.1.1"
sonor = "1.1.0"
tokio = { version = "1.18.2", features = ["full"] }
tracing = "0.1.34"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "tracing-log"] }

[dependencies.tui]
version = "0.19"
default-features = false
features = ["crossterm"]

[profile.release]
strip = "symbols"
