[package]
name = "sinuous"
version = "0.1.4"
authors = ["Antoine Busch <antoine.busch@gmail.com>"]
edition = "2021"
description = "A simple TUI for controlling local Sonos speakers"
license = "MIT"
repository = "https://github.com/abusch/sinuous.git"
homepage = "https://github.com/abusch/sinuous"

[dependencies]
anyhow = "1.0.57"
clap = { version = "4.0", features = ["cargo"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3.21"
human-panic = "2.0.0"
ratatui = "0.28"
reqwest = { version = "0.12" }
serde = "1"
serde_derive = "1"
serde_json = "1"
sonor = "2"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.34"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.11", features = [
  "env-filter",
  "tracing-log",
] }

[profile.release]
strip = "symbols"
